@@ -54,5 +54,10 @@
 <hr class="soften">
 
 <footer class="footer">
-  <p class="muted about-footer">Task Tracker Version <%= link_to TaskTracker::VERSION::STRING, "https://github.com/remomueller/tasktracker/tree/#{TaskTracker::VERSION::MAJOR}.#{TaskTracker::VERSION::MINOR}.#{TaskTracker::VERSION::TINY}" %></p>
+  <p class="muted about-footer">
+    <%= DEFAULT_APP_NAME %> Version <%= link_to TaskTracker::VERSION::STRING, "https://github.com/remomueller/tasktracker/tree/#{TaskTracker::VERSION::MAJOR}.#{TaskTracker::VERSION::MINOR}.#{TaskTracker::VERSION::TINY}" %>
+  </p>
+  <p class="muted about-footer">
+    By using <%= DEFAULT_APP_NAME %> you are agreeing to the <%= link_to 'Acceptable Use Policy', about_use_path %>.
+  </p>
 </footer>
