@@ -1,0 +1,40 @@
+<% @title = "Acceptable Use Policy" %>
+
+<div class="page-header">
+  <h1><%= @title %></h1>
+</div>
+
+<p style="font-size:1.5em;line-height:2em">
+  <%= DEFAULT_APP_NAME %> provides a platform for collaborative project management. To keep the <%= DEFAULT_APP_NAME %> running smoothly for everyone, you agree that you will use the web application only in a manner consistent with the following Acceptable Use Policy.
+</p>
+
+<hr class="soften">
+
+<h4>You agree to:</h4>
+
+<ul>
+  <li>
+    <%= mail_to ABOUT_PAGE_CONTACT, 'Notify us', target: '_blank', subject: "#{DEFAULT_APP_NAME} Account Compromised" %> immediately if your account has been comprised and to follow immediate steps to secure your account.
+  </li>
+</ul>
+
+<hr class="soften">
+
+<h4>You agree <span class="label" style="background-color:red">NOT</span> to:</h4>
+
+<ul>
+  <li>Add <span title="Protected Health Information" rel="tooltip"><abbr title="">PHI</abbr></span> to any projects, stickies, or comments.</li>
+  <li>Share you account login and password with anyone else for any reason.</li>
+  <li>Create projects, stickies, or comments that contain objectionable content.</li>
+  <li>Embed links into stickies or comments that link to objectionable content or malware.</li>
+</ul>
+
+<hr class="soften">
+
+<h4>We reserve the right to:</h4>
+
+<ul>
+  <li>Conduct audits to detect violations of the Acceptable Use Policy.</li>
+  <li>Remove user access and delete all the user's data that is in violation of the Acceptable Use Policy.</li>
+  <li>Remove all data that contains any <span title="Protected Health Information" rel="tooltip"><abbr title="">PHI</abbr></span>.</li>
+</ul>
