@@ -2,6 +2,7 @@
 
 * Enhancements
   * Comment Emails now include the full time the comment was made to provide better information when looking at older comment emails
+  * Acceptable Use Policy added
 
 * Bug Fix
   * Default colors for project are now correctly based on the order in which the project was created
